parte 5/tmp6/ParAuLnew.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from ParAuL.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pListPGlobl -> ListPGlobl                   (1)
	%start_pPGlobl -> PGlobl                           (2)
	%start_pBlock -> Block                             (3)
	%start_pListStm -> ListStm                         (4)
	%start_pBasicType -> BasicType                     (5)
	%start_pBoolean -> Boolean                         (6)
	%start_pPtrVoid -> PtrVoid                         (7)
	%start_pCompoundType -> CompoundType               (8)
	%start_pBracks -> Bracks                           (9)
	%start_pListBracks -> ListBracks                   (10)
	%start_pStm -> Stm                                 (11)
	%start_pEBlk -> EBlk                               (12)
	%start_pDecl -> Decl                               (13)
	%start_pVarInit -> VarInit                         (14)
	%start_pArray -> Array                             (15)
	%start_pVType -> VType                             (16)
	%start_pListVType -> ListVType                     (17)
	%start_pListArray -> ListArray                     (18)
	%start_pLocal -> Local                             (19)
	%start_pAss -> Ass                                 (20)
	%start_pFunc -> Func                               (21)
	%start_pFuncWrite -> FuncWrite                     (22)
	%start_pFuncRead -> FuncRead                       (23)
	%start_pWhile -> While                             (24)
	%start_pRepeat -> Repeat                           (25)
	%start_pFor -> For                                 (26)
	%start_pIncrement -> Increment                     (27)
	%start_pIf -> If                                   (28)
	%start_pElse -> Else                               (29)
	%start_pElseIf -> ElseIf                           (30)
	%start_pListElseIf -> ListElseIf                   (31)
	%start_pReturn -> Return                           (32)
	%start_pRValue -> RValue                           (33)
	%start_pBreak -> Break                             (34)
	%start_pListRExp -> ListRExp                       (35)
	%start_pFuncD -> FuncD                             (36)
	%start_pParamF -> ParamF                           (37)
	%start_pListParamF -> ListParamF                   (38)
	%start_pModality -> Modality                       (39)
	%start_pLExp -> LExp                               (40)
	%start_pListDim -> ListDim                         (41)
	%start_pDim -> Dim                                 (42)
	%start_pRExp -> RExp                               (43)
	%start_pRExp2 -> RExp2                             (44)
	%start_pRExp3 -> RExp3                             (45)
	%start_pRExp6 -> RExp6                             (46)
	%start_pRExp7 -> RExp7                             (47)
	%start_pRExp8 -> RExp8                             (48)
	%start_pRExp9 -> RExp9                             (49)
	%start_pRExp10 -> RExp10                           (50)
	%start_pRExp11 -> RExp11                           (51)
	%start_pRExp1 -> RExp1                             (52)
	%start_pRExp4 -> RExp4                             (53)
	%start_pRExp5 -> RExp5                             (54)
	%start_pRExp12 -> RExp12                           (55)
	Char -> L_charac                                   (56)
	Double -> L_doubl                                  (57)
	Integer -> L_integ                                 (58)
	String -> L_quoted                                 (59)
	LIdent -> L_LIdent                                 (60)
	Program -> ListPGlobl                              (61)
	ListPGlobl -> PGlobl                               (62)
	ListPGlobl -> PGlobl ListPGlobl                    (63)
	PGlobl -> Stm                                      (64)
	PGlobl -> FuncD                                    (65)
	Block -> ListStm                                   (66)
	ListStm ->                                         (67)
	ListStm -> ListStm Stm                             (68)
	BasicType -> 'Bool'                                (69)
	BasicType -> 'Char'                                (70)
	BasicType -> 'Float'                               (71)
	BasicType -> 'Int'                                 (72)
	BasicType -> 'String'                              (73)
	BasicType -> 'Void'                                (74)
	Boolean -> 'true'                                  (75)
	Boolean -> 'false'                                 (76)
	PtrVoid -> 'nil'                                   (77)
	CompoundType -> BasicType                          (78)
	CompoundType -> '*' CompoundType                   (79)
	CompoundType -> BasicType ListBracks               (80)
	Bracks -> '[' ']'                                  (81)
	ListBracks -> Bracks                               (82)
	ListBracks -> Bracks ListBracks                    (83)
	Stm -> Decl ';'                                    (84)
	Stm -> Local ';'                                   (85)
	Stm -> Ass ';'                                     (86)
	Stm -> While                                       (87)
	Stm -> Repeat ';'                                  (88)
	Stm -> For                                         (89)
	Stm -> If                                          (90)
	Stm -> Func ';'                                    (91)
	Stm -> EBlk                                        (92)
	Stm -> Return ';'                                  (93)
	Stm -> Break ';'                                   (94)
	EBlk -> 'do' Block 'end'                           (95)
	Decl -> BasicType LExp VarInit                     (96)
	VarInit ->                                         (97)
	VarInit -> '=' RExp                                (98)
	VarInit -> '=' Array                               (99)
	Array -> '{' ListArray '}'                         (100)
	Array -> '{' ListVType '}'                         (101)
	VType -> Boolean                                   (102)
	VType -> Char                                      (103)
	VType -> Double                                    (104)
	VType -> Integer                                   (105)
	VType -> String                                    (106)
	VType -> PtrVoid                                   (107)
	ListVType -> VType                                 (108)
	ListVType -> VType ',' ListVType                   (109)
	ListArray -> Array                                 (110)
	ListArray -> Array ',' ListArray                   (111)
	Local -> 'local' Decl                              (112)
	Ass -> LExp '=' RExp                               (113)
	Func -> FuncWrite                                  (114)
	Func -> FuncRead                                   (115)
	Func -> LIdent '(' ListRExp ')'                    (116)
	FuncWrite -> 'writeInt' '(' RExp ')'               (117)
	FuncWrite -> 'writeFloat' '(' RExp ')'             (118)
	FuncWrite -> 'writeChar' '(' RExp ')'              (119)
	FuncWrite -> 'writeString' '(' RExp ')'            (120)
	FuncRead -> 'readInt' '(' ')'                      (121)
	FuncRead -> 'readFloat' '(' ')'                    (122)
	FuncRead -> 'readChar' '(' ')'                     (123)
	FuncRead -> 'readString' '(' ')'                   (124)
	While -> 'while' RExp EBlk                         (125)
	Repeat -> 'repeat' Block 'until' RExp              (126)
	For -> 'for' LIdent '=' RExp ',' RExp Increment EBlk   (127)
	For -> 'for' LIdent 'in' LIdent EBlk               (128)
	Increment ->                                       (129)
	Increment -> ',' RExp                              (130)
	If -> 'if' RExp 'then' Block ListElseIf Else 'end'   (131)
	Else -> 'else' Block                               (132)
	Else ->                                            (133)
	ElseIf -> 'elseif' RExp 'then' Block               (134)
	ListElseIf ->                                      (135)
	ListElseIf -> ListElseIf ElseIf                    (136)
	Return -> 'return' RValue                          (137)
	RValue ->                                          (138)
	RValue -> RExp                                     (139)
	Break -> 'break'                                   (140)
	ListRExp ->                                        (141)
	ListRExp -> RExp                                   (142)
	ListRExp -> RExp ',' ListRExp                      (143)
	FuncD -> CompoundType 'function' LIdent '(' ListParamF ')' Block 'end'   (144)
	ParamF -> Modality BasicType LExp                  (145)
	ListParamF ->                                      (146)
	ListParamF -> ParamF                               (147)
	ListParamF -> ParamF ',' ListParamF                (148)
	Modality ->                                        (149)
	Modality -> 'val'                                  (150)
	Modality -> 'ref'                                  (151)
	Modality -> 'const'                                (152)
	Modality -> 'res'                                  (153)
	Modality -> 'valres'                               (154)
	Modality -> 'name'                                 (155)
	LExp -> LIdent                                     (156)
	LExp -> '*' LExp                                   (157)
	LExp -> LIdent ListDim                             (158)
	ListDim -> Dim                                     (159)
	ListDim -> Dim ListDim                             (160)
	Dim -> '[' RExp ']'                                (161)
	RExp -> RExp 'or' RExp1                            (162)
	RExp -> RExp1 'and' RExp2                          (163)
	RExp -> RExp1                                      (164)
	RExp2 -> 'not' RExp3                               (165)
	RExp2 -> RExp3                                     (166)
	RExp3 -> RExp3 '==' RExp5                          (167)
	RExp3 -> RExp3 '~=' RExp5                          (168)
	RExp3 -> RExp3 '<' RExp5                           (169)
	RExp3 -> RExp3 '<=' RExp5                          (170)
	RExp3 -> RExp3 '>' RExp5                           (171)
	RExp3 -> RExp3 '>=' RExp5                          (172)
	RExp3 -> RExp4                                     (173)
	RExp6 -> RExp6 '+' RExp7                           (174)
	RExp6 -> RExp6 '-' RExp7                           (175)
	RExp6 -> RExp7                                     (176)
	RExp7 -> RExp7 '*' RExp8                           (177)
	RExp7 -> RExp7 '/' RExp8                           (178)
	RExp7 -> RExp7 '%' RExp8                           (179)
	RExp7 -> RExp8                                     (180)
	RExp8 -> RExp9 '^' RExp8                           (181)
	RExp8 -> RExp9                                     (182)
	RExp9 -> '-' RExp10                                (183)
	RExp9 -> RExp10                                    (184)
	RExp10 -> Func                                     (185)
	RExp10 -> RExp10 '..' RExp11                       (186)
	RExp10 -> '#' RExp11                               (187)
	RExp10 -> RExp11                                   (188)
	RExp11 -> Integer                                  (189)
	RExp11 -> LExp                                     (190)
	RExp11 -> '&' LExp                                 (191)
	RExp11 -> Double                                   (192)
	RExp11 -> String                                   (193)
	RExp11 -> Char                                     (194)
	RExp11 -> Boolean                                  (195)
	RExp11 -> PtrVoid                                  (196)
	RExp11 -> RExp12                                   (197)
	RExp1 -> RExp2                                     (198)
	RExp4 -> RExp5                                     (199)
	RExp5 -> RExp6                                     (200)
	RExp12 -> '(' RExp ')'                             (201)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'#'            { PT _ (TS _ 1) }
	'%'            { PT _ (TS _ 2) }
	'&'            { PT _ (TS _ 3) }
	'('            { PT _ (TS _ 4) }
	')'            { PT _ (TS _ 5) }
	'*'            { PT _ (TS _ 6) }
	'+'            { PT _ (TS _ 7) }
	','            { PT _ (TS _ 8) }
	'-'            { PT _ (TS _ 9) }
	'..'           { PT _ (TS _ 10) }
	'/'            { PT _ (TS _ 11) }
	';'            { PT _ (TS _ 12) }
	'<'            { PT _ (TS _ 13) }
	'<='           { PT _ (TS _ 14) }
	'='            { PT _ (TS _ 15) }
	'=='           { PT _ (TS _ 16) }
	'>'            { PT _ (TS _ 17) }
	'>='           { PT _ (TS _ 18) }
	'Bool'         { PT _ (TS _ 19) }
	'Char'         { PT _ (TS _ 20) }
	'Float'        { PT _ (TS _ 21) }
	'Int'          { PT _ (TS _ 22) }
	'String'       { PT _ (TS _ 23) }
	'Void'         { PT _ (TS _ 24) }
	'['            { PT _ (TS _ 25) }
	']'            { PT _ (TS _ 26) }
	'^'            { PT _ (TS _ 27) }
	'and'          { PT _ (TS _ 28) }
	'break'        { PT _ (TS _ 29) }
	'const'        { PT _ (TS _ 30) }
	'do'           { PT _ (TS _ 31) }
	'else'         { PT _ (TS _ 32) }
	'elseif'       { PT _ (TS _ 33) }
	'end'          { PT _ (TS _ 34) }
	'false'        { PT _ (TS _ 35) }
	'for'          { PT _ (TS _ 36) }
	'function'     { PT _ (TS _ 37) }
	'if'           { PT _ (TS _ 38) }
	'in'           { PT _ (TS _ 39) }
	'local'        { PT _ (TS _ 40) }
	'name'         { PT _ (TS _ 41) }
	'nil'          { PT _ (TS _ 42) }
	'not'          { PT _ (TS _ 43) }
	'or'           { PT _ (TS _ 44) }
	'readChar'     { PT _ (TS _ 45) }
	'readFloat'    { PT _ (TS _ 46) }
	'readInt'      { PT _ (TS _ 47) }
	'readString'   { PT _ (TS _ 48) }
	'ref'          { PT _ (TS _ 49) }
	'repeat'       { PT _ (TS _ 50) }
	'res'          { PT _ (TS _ 51) }
	'return'       { PT _ (TS _ 52) }
	'then'         { PT _ (TS _ 53) }
	'true'         { PT _ (TS _ 54) }
	'until'        { PT _ (TS _ 55) }
	'val'          { PT _ (TS _ 56) }
	'valres'       { PT _ (TS _ 57) }
	'while'        { PT _ (TS _ 58) }
	'writeChar'    { PT _ (TS _ 59) }
	'writeFloat'   { PT _ (TS _ 60) }
	'writeInt'     { PT _ (TS _ 61) }
	'writeString'  { PT _ (TS _ 62) }
	'{'            { PT _ (TS _ 63) }
	'}'            { PT _ (TS _ 64) }
	'~='           { PT _ (TS _ 65) }
	L_charac       { PT _ (TC $$) }
	L_doubl        { PT _ (TD $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }
	L_LIdent       { PT _ (T_LIdent $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pListPGlobl rule  1
	%start_pPGlobl  rule  2
	%start_pBlock   rule  3
	%start_pListStm rule  4
	%start_pBasicType rule  5
	%start_pBoolean rule  6
	%start_pPtrVoid rule  7
	%start_pCompoundType rule  8
	%start_pBracks  rule  9
	%start_pListBracks rule  10
	%start_pStm     rule  11
	%start_pEBlk    rule  12
	%start_pDecl    rule  13
	%start_pVarInit rule  14
	%start_pArray   rule  15
	%start_pVType   rule  16
	%start_pListVType rule  17
	%start_pListArray rule  18
	%start_pLocal   rule  19
	%start_pAss     rule  20
	%start_pFunc    rule  21
	%start_pFuncWrite rule  22
	%start_pFuncRead rule  23
	%start_pWhile   rule  24
	%start_pRepeat  rule  25
	%start_pFor     rule  26
	%start_pIncrement rule  27
	%start_pIf      rule  28
	%start_pElse    rule  29
	%start_pElseIf  rule  30
	%start_pListElseIf rule  31
	%start_pReturn  rule  32
	%start_pRValue  rule  33
	%start_pBreak   rule  34
	%start_pListRExp rule  35
	%start_pFuncD   rule  36
	%start_pParamF  rule  37
	%start_pListParamF rule  38
	%start_pModality rule  39
	%start_pLExp    rule  40
	%start_pListDim rule  41
	%start_pDim     rule  42
	%start_pRExp    rule  43
	%start_pRExp2   rule  44
	%start_pRExp3   rule  45
	%start_pRExp6   rule  46
	%start_pRExp7   rule  47
	%start_pRExp8   rule  48
	%start_pRExp9   rule  49
	%start_pRExp10  rule  50
	%start_pRExp11  rule  51
	%start_pRExp1   rule  52
	%start_pRExp4   rule  53
	%start_pRExp5   rule  54
	%start_pRExp12  rule  55
	Char            rule  56
	Double          rule  57
	Integer         rule  58
	String          rule  59
	LIdent          rule  60
	Program         rule  61
	ListPGlobl      rules 62, 63
	PGlobl          rules 64, 65
	Block           rule  66
	ListStm         rules 67, 68
	BasicType       rules 69, 70, 71, 72, 73, 74
	Boolean         rules 75, 76
	PtrVoid         rule  77
	CompoundType    rules 78, 79, 80
	Bracks          rule  81
	ListBracks      rules 82, 83
	Stm             rules 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94
	EBlk            rule  95
	Decl            rule  96
	VarInit         rules 97, 98, 99
	Array           rules 100, 101
	VType           rules 102, 103, 104, 105, 106, 107
	ListVType       rules 108, 109
	ListArray       rules 110, 111
	Local           rule  112
	Ass             rule  113
	Func            rules 114, 115, 116
	FuncWrite       rules 117, 118, 119, 120
	FuncRead        rules 121, 122, 123, 124
	While           rule  125
	Repeat          rule  126
	For             rules 127, 128
	Increment       rules 129, 130
	If              rule  131
	Else            rules 132, 133
	ElseIf          rule  134
	ListElseIf      rules 135, 136
	Return          rule  137
	RValue          rules 138, 139
	Break           rule  140
	ListRExp        rules 141, 142, 143
	FuncD           rule  144
	ParamF          rule  145
	ListParamF      rules 146, 147, 148
	Modality        rules 149, 150, 151, 152, 153, 154, 155
	LExp            rules 156, 157, 158
	ListDim         rules 159, 160
	Dim             rule  161
	RExp            rules 162, 163, 164
	RExp2           rules 165, 166
	RExp3           rules 167, 168, 169, 170, 171, 172, 173
	RExp6           rules 174, 175, 176
	RExp7           rules 177, 178, 179, 180
	RExp8           rules 181, 182
	RExp9           rules 183, 184
	RExp10          rules 185, 186, 187, 188
	RExp11          rules 189, 190, 191, 192, 193, 194, 195, 196, 197
	RExp1           rule  198
	RExp4           rule  199
	RExp5           rule  200
	RExp12          rule  201

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'*'            shift, and enter state 219
	'Bool'         shift, and enter state 136
	'Char'         shift, and enter state 137
	'Float'        shift, and enter state 138
	'Int'          shift, and enter state 139
	'String'       shift, and enter state 140
	'Void'         shift, and enter state 141
	'break'        shift, and enter state 145
	'do'           shift, and enter state 191
	'for'          shift, and enter state 160
	'if'           shift, and enter state 156
	'local'        shift, and enter state 172
	'readChar'     shift, and enter state 85
	'readFloat'    shift, and enter state 86
	'readInt'      shift, and enter state 87
	'readString'   shift, and enter state 88
	'repeat'       shift, and enter state 162
	'return'       shift, and enter state 149
	'while'        shift, and enter state 164
	'writeChar'    shift, and enter state 90
	'writeFloat'   shift, and enter state 91
	'writeInt'     shift, and enter state 92
	'writeString'  shift, and enter state 93
	L_LIdent       shift, and enter state 97

	LIdent         goto state 64
	Program        goto state 222
	ListPGlobl     goto state 223
	PGlobl         goto state 221
	BasicType      goto state 216
	CompoundType   goto state 133
	Stm            goto state 217
	EBlk           goto state 193
	Decl           goto state 194
	Local          goto state 195
	Ass            goto state 196
	Func           goto state 197
	FuncWrite      goto state 68
	FuncRead       goto state 69
	While          goto state 198
	Repeat         goto state 199
	For            goto state 200
	If             goto state 201
	Return         goto state 202
	Break          goto state 203
	FuncD          goto state 218
	LExp           goto state 170

State 1


	'*'            shift, and enter state 219
	'Bool'         shift, and enter state 136
	'Char'         shift, and enter state 137
	'Float'        shift, and enter state 138
	'Int'          shift, and enter state 139
	'String'       shift, and enter state 140
	'Void'         shift, and enter state 141
	'break'        shift, and enter state 145
	'do'           shift, and enter state 191
	'for'          shift, and enter state 160
	'if'           shift, and enter state 156
	'local'        shift, and enter state 172
	'readChar'     shift, and enter state 85
	'readFloat'    shift, and enter state 86
	'readInt'      shift, and enter state 87
	'readString'   shift, and enter state 88
	'repeat'       shift, and enter state 162
	'return'       shift, and enter state 149
	'while'        shift, and enter state 164
	'writeChar'    shift, and enter state 90
	'writeFloat'   shift, and enter state 91
	'writeInt'     shift, and enter state 92
	'writeString'  shift, and enter state 93
	L_LIdent       shift, and enter state 97

	LIdent         goto state 64
	ListPGlobl     goto state 220
	PGlobl         goto state 221
	BasicType      goto state 216
	CompoundType   goto state 133
	Stm            goto state 217
	EBlk           goto state 193
	Decl           goto state 194
	Local          goto state 195
	Ass            goto state 196
	Func           goto state 197
	FuncWrite      goto state 68
	FuncRead       goto state 69
	While          goto state 198
	Repeat         goto state 199
	For            goto state 200
	If             goto state 201
	Return         goto state 202
	Break          goto state 203
	FuncD          goto state 218
	LExp           goto state 170

State 2


	'*'            shift, and enter state 219
	'Bool'         shift, and enter state 136
	'Char'         shift, and enter state 137
	'Float'        shift, and enter state 138
	'Int'          shift, and enter state 139
	'String'       shift, and enter state 140
	'Void'         shift, and enter state 141
	'break'        shift, and enter state 145
	'do'           shift, and enter state 191
	'for'          shift, and enter state 160
	'if'           shift, and enter state 156
	'local'        shift, and enter state 172
	'readChar'     shift, and enter state 85
	'readFloat'    shift, and enter state 86
	'readInt'      shift, and enter state 87
	'readString'   shift, and enter state 88
	'repeat'       shift, and enter state 162
	'return'       shift, and enter state 149
	'while'        shift, and enter state 164
	'writeChar'    shift, and enter state 90
	'writeFloat'   shift, and enter state 91
	'writeInt'     shift, and enter state 92
	'writeString'  shift, and enter state 93
	L_LIdent       shift, and enter state 97

	LIdent         goto state 64
	PGlobl         goto state 215
	BasicType      goto state 216
	CompoundType   goto state 133
	Stm            goto state 217
	EBlk           goto state 193
	Decl           goto state 194
	Local          goto state 195
	Ass            goto state 196
	Func           goto state 197
	FuncWrite      goto state 68
	FuncRead       goto state 69
	While          goto state 198
	Repeat         goto state 199
	For            goto state 200
	If             goto state 201
	Return         goto state 202
	Break          goto state 203
	FuncD          goto state 218
	LExp           goto state 170

State 3


	'*'            reduce using rule 67
	'Bool'         reduce using rule 67
	'Char'         reduce using rule 67
	'Float'        reduce using rule 67
	'Int'          reduce using rule 67
	'String'       reduce using rule 67
	'Void'         reduce using rule 67
	'break'        reduce using rule 67
	'do'           reduce using rule 67
	'for'          reduce using rule 67
	'if'           reduce using rule 67
	'local'        reduce using rule 67
	'readChar'     reduce using rule 67
	'readFloat'    reduce using rule 67
	'readInt'      reduce using rule 67
	'readString'   reduce using rule 67
	'repeat'       reduce using rule 67
	'return'       reduce using rule 67
	'while'        reduce using rule 67
	'writeChar'    reduce using rule 67
	'writeFloat'   reduce using rule 67
	'writeInt'     reduce using rule 67
	'writeString'  reduce using rule 67
	L_LIdent       reduce using rule 67
	%eof           reduce using rule 67

	Block          goto state 213
	ListStm        goto state 214

State 4


	'*'            reduce using rule 67
	'Bool'         reduce using rule 67
	'Char'         reduce using rule 67
	'Float'        reduce using rule 67
	'Int'          reduce using rule 67
	'String'       reduce using rule 67
	'Void'         reduce using rule 67
	'break'        reduce using rule 67
	'do'           reduce using rule 67
	'for'          reduce using rule 67
	'if'           reduce using rule 67
	'local'        reduce using rule 67
	'readChar'     reduce using rule 67
	'readFloat'    reduce using rule 67
	'readInt'      reduce using rule 67
	'readString'   reduce using rule 67
	'repeat'       reduce using rule 67
	'return'       reduce using rule 67
	'while'        reduce using rule 67
	'writeChar'    reduce using rule 67
	'writeFloat'   reduce using rule 67
	'writeInt'     reduce using rule 67
	'writeString'  reduce using rule 67
	L_LIdent       reduce using rule 67
	%eof           reduce using rule 67

	ListStm        goto state 212

State 5


	'Bool'         shift, and enter state 136
	'Char'         shift, and enter state 137
	'Float'        shift, and enter state 138
	'Int'          shift, and enter state 139
	'String'       shift, and enter state 140
	'Void'         shift, and enter state 141

	BasicType      goto state 211

State 6


	'false'        shift, and enter state 83
	'true'         shift, and enter state 89

	Boolean        goto state 210

State 7


	'nil'          shift, and enter state 84

	PtrVoid        goto state 209

State 8


	'*'            shift, and enter state 135
	'Bool'         shift, and enter state 136
	'Char'         shift, and enter state 137
	'Float'        shift, and enter state 138
	'Int'          shift, and enter state 139
	'String'       shift, and enter state 140
	'Void'         shift, and enter state 141

	BasicType      goto state 132
	CompoundType   goto state 208

State 9


	'['            shift, and enter state 206

	Bracks         goto state 207

State 10


	'['            shift, and enter state 206

	Bracks         goto state 204
	ListBracks     goto state 205

State 11


	'*'            shift, and enter state 81
	'Bool'         shift, and enter state 136
	'Char'         shift, and enter state 137
	'Float'        shift, and enter state 138
	'Int'          shift, and enter state 139
	'String'       shift, and enter state 140
	'Void'         shift, and enter state 141
	'break'        shift, and enter state 145
	'do'           shift, and enter state 191
	'for'          shift, and enter state 160
	'if'           shift, and enter state 156
	'local'        shift, and enter state 172
	'readChar'     shift, and enter state 85
	'readFloat'    shift, and enter state 86
	'readInt'      shift, and enter state 87
	'readString'   shift, and enter state 88
	'repeat'       shift, and enter state 162
	'return'       shift, and enter state 149
	'while'        shift, and enter state 164
	'writeChar'    shift, and enter state 90
	'writeFloat'   shift, and enter state 91
	'writeInt'     shift, and enter state 92
	'writeString'  shift, and enter state 93
	L_LIdent       shift, and enter state 97

	LIdent         goto state 64
	BasicType      goto state 188
	Stm            goto state 192
	EBlk           goto state 193
	Decl           goto state 194
	Local          goto state 195
	Ass            goto state 196
	Func           goto state 197
	FuncWrite      goto state 68
	FuncRead       goto state 69
	While          goto state 198
	Repeat         goto state 199
	For            goto state 200
	If             goto state 201
	Return         goto state 202
	Break          goto state 203
	LExp           goto state 170

State 12


	'do'           shift, and enter state 191

	EBlk           goto state 190

State 13


	'Bool'         shift, and enter state 136
	'Char'         shift, and enter state 137
	'Float'        shift, and enter state 138
	'Int'          shift, and enter state 139
	'String'       shift, and enter state 140
	'Void'         shift, and enter state 141

	BasicType      goto state 188
	Decl           goto state 189

State 14


	'='            shift, and enter state 187
	%eof           reduce using rule 97

	VarInit        goto state 186

State 15


	'{'            shift, and enter state 175

	Array          goto state 185

State 16


	'false'        shift, and enter state 83
	'nil'          shift, and enter state 84
	'true'         shift, and enter state 89
	L_charac       shift, and enter state 57
	L_doubl        shift, and enter state 94
	L_integ        shift, and enter state 95
	L_quoted       shift, and enter state 96

	Char           goto state 176
	Double         goto state 177
	Integer        goto state 178
	String         goto state 179
	Boolean        goto state 180
	PtrVoid        goto state 181
	VType          goto state 184

State 17


	'false'        shift, and enter state 83
	'nil'          shift, and enter state 84
	'true'         shift, and enter state 89
	L_charac       shift, and enter state 57
	L_doubl        shift, and enter state 94
	L_integ        shift, and enter state 95
	L_quoted       shift, and enter state 96

	Char           goto state 176
	Double         goto state 177
	Integer        goto state 178
	String         goto state 179
	Boolean        goto state 180
	PtrVoid        goto state 181
	VType          goto state 182
	ListVType      goto state 183

State 18


	'{'            shift, and enter state 175

	Array          goto state 173
	ListArray      goto state 174

State 19


	'local'        shift, and enter state 172

	Local          goto state 171

State 20


	'*'            shift, and enter state 81
	L_LIdent       shift, and enter state 97

	LIdent         goto state 105
	Ass            goto state 169
	LExp           goto state 170

State 21


	'readChar'     shift, and enter state 85
	'readFloat'    shift, and enter state 86
	'readInt'      shift, and enter state 87
	'readString'   shift, and enter state 88
	'writeChar'    shift, and enter state 90
	'writeFloat'   shift, and enter state 91
	'writeInt'     shift, and enter state 92
	'writeString'  shift, and enter state 93
	L_LIdent       shift, and enter state 97

	LIdent         goto state 167
	Func           goto state 168
	FuncWrite      goto state 68
	FuncRead       goto state 69

State 22


	'writeChar'    shift, and enter state 90
	'writeFloat'   shift, and enter state 91
	'writeInt'     shift, and enter state 92
	'writeString'  shift, and enter state 93

	FuncWrite      goto state 166

State 23


	'readChar'     shift, and enter state 85
	'readFloat'    shift, and enter state 86
	'readInt'      shift, and enter state 87
	'readString'   shift, and enter state 88

	FuncRead       goto state 165

State 24


	'while'        shift, and enter state 164

	While          goto state 163

State 25


	'repeat'       shift, and enter state 162

	Repeat         goto state 161

State 26


	'for'          shift, and enter state 160

	For            goto state 159

State 27


	','            shift, and enter state 158
	%eof           reduce using rule 129

	Increment      goto state 157

State 28


	'if'           shift, and enter state 156

	If             goto state 155

State 29


	'else'         shift, and enter state 154
	%eof           reduce using rule 133

	Else           goto state 153

State 30


	'elseif'       shift, and enter state 152

	ElseIf         goto state 151

State 31


	'elseif'       reduce using rule 135
	%eof           reduce using rule 135

	ListElseIf     goto state 150

State 32


	'return'       shift, and enter state 149

	Return         goto state 148

State 33


	'#'            shift, and enter state 79
	'&'            shift, and enter state 80
	'('            shift, and enter state 59
	'*'            shift, and enter state 81
	'-'            shift, and enter state 82
	'false'        shift, and enter state 83
	'nil'          shift, and enter state 84
	'not'          shift, and enter state 104
	'readChar'     shift, and enter state 85
	'readFloat'    shift, and enter state 86
	'readInt'      shift, and enter state 87
	'readString'   shift, and enter state 88
	'true'         shift, and enter state 89
	'writeChar'    shift, and enter state 90
	'writeFloat'   shift, and enter state 91
	'writeInt'     shift, and enter state 92
	'writeString'  shift, and enter state 93
	L_charac       shift, and enter state 57
	L_doubl        shift, and enter state 94
	L_integ        shift, and enter state 95
	L_quoted       shift, and enter state 96
	L_LIdent       shift, and enter state 97
	%eof           reduce using rule 138

	Char           goto state 60
	Double         goto state 61
	Integer        goto state 62
	String         goto state 63
	LIdent         goto state 64
	Boolean        goto state 65
	PtrVoid        goto state 66
	Func           goto state 67
	FuncWrite      goto state 68
	FuncRead       goto state 69
	RValue         goto state 146
	LExp           goto state 70
	RExp           goto state 147
	RExp2          goto state 100
	RExp3          goto state 101
	RExp6          goto state 71
	RExp7          goto state 72
	RExp8          goto state 73
	RExp9          goto state 74
	RExp10         goto state 75
	RExp11         goto state 76
	RExp1          goto state 115
	RExp4          goto state 103
	RExp5          goto state 99
	RExp12         goto state 78

State 34


	'break'        shift, and enter state 145

	Break          goto state 144

State 35


	'#'            shift, and enter state 79
	'&'            shift, and enter state 80
	'('            shift, and enter state 59
	'*'            shift, and enter state 81
	'-'            shift, and enter state 82
	'false'        shift, and enter state 83
	'nil'          shift, and enter state 84
	'not'          shift, and enter state 104
	'readChar'     shift, and enter state 85
	'readFloat'    shift, and enter state 86
	'readInt'      shift, and enter state 87
	'readString'   shift, and enter state 88
	'true'         shift, and enter state 89
	'writeChar'    shift, and enter state 90
	'writeFloat'   shift, and enter state 91
	'writeInt'     shift, and enter state 92
	'writeString'  shift, and enter state 93
	L_charac       shift, and enter state 57
	L_doubl        shift, and enter state 94
	L_integ        shift, and enter state 95
	L_quoted       shift, and enter state 96
	L_LIdent       shift, and enter state 97
	%eof           reduce using rule 141

	Char           goto state 60
	Double         goto state 61
	Integer        goto state 62
	String         goto state 63
	LIdent         goto state 64
	Boolean        goto state 65
	PtrVoid        goto state 66
	Func           goto state 67
	FuncWrite      goto state 68
	FuncRead       goto state 69
	ListRExp       goto state 142
	LExp           goto state 70
	RExp           goto state 143
	RExp2          goto state 100
	RExp3          goto state 101
	RExp6          goto state 71
	RExp7          goto state 72
	RExp8          goto state 73
	RExp9          goto state 74
	RExp10         goto state 75
	RExp11         goto state 76
	RExp1          goto state 115
	RExp4          goto state 103
	RExp5          goto state 99
	RExp12         goto state 78

State 36


	'*'            shift, and enter state 135
	'Bool'         shift, and enter state 136
	'Char'         shift, and enter state 137
	'Float'        shift, and enter state 138
	'Int'          shift, and enter state 139
	'String'       shift, and enter state 140
	'Void'         shift, and enter state 141

	BasicType      goto state 132
	CompoundType   goto state 133
	FuncD          goto state 134

State 37


	'Bool'         reduce using rule 149
	'Char'         reduce using rule 149
	'Float'        reduce using rule 149
	'Int'          reduce using rule 149
	'String'       reduce using rule 149
	'Void'         reduce using rule 149
	'const'        shift, and enter state 122
	'name'         shift, and enter state 123
	'ref'          shift, and enter state 124
	'res'          shift, and enter state 125
	'val'          shift, and enter state 126
	'valres'       shift, and enter state 127

	ParamF         goto state 131
	Modality       goto state 130

State 38


	'Bool'         reduce using rule 149
	'Char'         reduce using rule 149
	'Float'        reduce using rule 149
	'Int'          reduce using rule 149
	'String'       reduce using rule 149
	'Void'         reduce using rule 149
	'const'        shift, and enter state 122
	'name'         shift, and enter state 123
	'ref'          shift, and enter state 124
	'res'          shift, and enter state 125
	'val'          shift, and enter state 126
	'valres'       shift, and enter state 127
	%eof           reduce using rule 146

	ParamF         goto state 128
	ListParamF     goto state 129
	Modality       goto state 130

State 39


	'const'        shift, and enter state 122
	'name'         shift, and enter state 123
	'ref'          shift, and enter state 124
	'res'          shift, and enter state 125
	'val'          shift, and enter state 126
	'valres'       shift, and enter state 127
	%eof           reduce using rule 149

	Modality       goto state 121

State 40


	'*'            shift, and enter state 81
	L_LIdent       shift, and enter state 97
